tests/Rules/Media/Fixtures/valid/input_image_with_alt.html.twig
<input type="image" src="submit.png" alt="Submit form">
